Adiciona foto atual

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h2>Luana de Moraes Soares</h2>
+
+    <p id="Luana">
+      <img src="eu.jpeg" width="300px" alt="Foto de Luana" />
+    </p>
   </body>
 </html>
