Adiciona breve descrição

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <p id="Luana">
       <img src="eu.jpeg" width="300px" alt="Foto de Luana" />
     </p>
+
+    <p>Estudante de Desenvolvimento Web na <em>Trybe</em></p>
+    Tenho 21 anos, brasileira, natural de Recife - Pernambuco. Atualmente me
+    dedicando em tempo integral para uma nova carreira como desenvolvedora web.
+    E cada dia mais empolgada com o conhecimento adquirido e compartilhado entre
+    a equipe e colegas.
   </body>
 </html>
