--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
     dedicando em tempo integral para uma nova carreira como desenvolvedora web.
     E cada dia mais empolgada com o conhecimento adquirido e compartilhado entre
     a equipe e colegas.
+
+    <h4>Habilidades que mais me orgulho</h4>
+    <ul>
+      <li>Protativade</li>
+      <li>Persistente</li>
+      <li><strong>Empatia</strong></li>
+    </ul>
   </body>
 </html>
