Adiciona link interno para foto

--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
       <li>Persistente</li>
       <li><strong>Empatia</strong></li>
     </ul>
+
+    <a href="#Luana">Luana</a>
   </body>
 </html>
