Adiciona link externo para blog

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       <li><strong>Empatia</strong></li>
     </ul>
 
-    <a href="#Luana">Luana</a>
+    <a href="#Luana">Luana</a> |
+    <a
+      href="https://perfumariaancestral.com.br/conexao-camomila/"
+      target="_blank"
+      >Conexão Camomila</a
+    >
   </body>
 </html>
