Adiciona índice com links internos e configurações finais

--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
     <title>Portifólio Web | Luana</title>
   </head>
   <body>
+    <ul>
+      <li><a href="#Sobre">Sobre mim</a></li>
+      <li><a href="#Habilidades">Habilidades</a></li>
+    </ul>
     <h2>Luana de Moraes Soares</h2>
 
     <p id="Luana">
       <img src="eu.jpeg" width="300px" alt="Foto de Luana" />
     </p>
 
-    <p>Estudante de Desenvolvimento Web na <em>Trybe</em></p>
+    <p id="Sobre"><h3>Estudante de Desenvolvimento Web na <em>Trybe</em></h3></p>
     Tenho 21 anos, brasileira, natural de Recife - Pernambuco. Atualmente me
     dedicando em tempo integral para uma nova carreira como desenvolvedora web.
     E cada dia mais empolgada com o conhecimento adquirido e compartilhado entre
     a equipe e colegas.
 
-    <h4>Habilidades que mais me orgulho</h4>
+    <h4 id="Habilidades">Habilidades que mais me orgulho</h4>
     <ul>
-      <li>Protativade</li>
-      <li>Persistente</li>
+      <li>Proatividade</li>
+      <li>Persistência</li>
       <li><strong>Empatia</strong></li>
     </ul>
 
